# QMDZvec

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  reattribute_memories.py  redistribute_main_memories.py  requirements.txt
.brv/: config.json
.brv/context-tree/: .snapshot.json
.github/workflows/: test.yml
docs/: api-reference.md  architecture.md  deployment.md
memclawz/: __init__.py  api.py  classifier.py  compaction_cron.py  compactor.py  config.py  contradiction.py  decay.py  enrichment.py  federation.py  graphiti_layer.py  hybrid_search.py  importer.py  lifecycle.py  mcp_server.py  reflection.py  router.py  scoring.py  utils.py  v7_extensions.py  watcher.py
scripts/: fleet-sync.sh  reclassify.py
systemd/: memclawz-api.service  memclawz-cron.service  memclawz-mcp.service  memclawz-watcher.service
tests/: conftest.py  test_api.py  test_classifier.py  test_contradiction.py  test_e2e.py  test_e2e_v7.py  test_enrichment.py  test_federation.py  test_hybrid_search.py  test_lifecycle.py  test_router.py  test_scoring.py  test_v7_extensions.py  test_watcher.py
