[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memclawz"
version = "7.0.0"
description = "AI agent fleet memory system — composite scoring, compaction engine, Graphiti temporal graph, multi-claw federation, sleep-time reflection, MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Yoni Assia"}]
dependencies = [
    "mem0ai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "qdrant-client>=1.13.0",
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "graphiti-core>=0.28.0",
    "neo4j>=5.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0", 
    "httpx>=0.24",
    "pytest-asyncio>=0.21"
]

[project.scripts]
memclawz-watcher = "memclawz.watcher:main"
memclawz-api = "memclawz.api:main"
memclawz-mcp = "memclawz.mcp_server:main"
memclawz-cron = "memclawz.compaction_cron:main"

[tool.setuptools.packages.find]
include = ["memclawz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests"
]
asyncio_mode = "auto"
